<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item
		android:title="@string/nav_go_to"
		android:id="@+id/MenuNav"
		android:orderInCategory="6"
		android:icon="@drawable/ic_menu_goto">
		<menu>
			<item
				android:title="@string/menu_subcats"
				android:id="@+id/MenuNavSubCats" />
			<item
				android:title="@string/menu_refresh"
				android:id="@+id/MenuNavRefresh" />	
			<item
				android:title="@string/nav_first_page"
				android:id="@+id/MenuNavFirstPage" />
			<item
				android:title="@string/nav_previous_page"
				android:id="@+id/MenuNavPreviousPage" />
			<item
				android:title="@string/nav_user_page"
				android:id="@+id/MenuNavUserPage" />				
			<item
				android:title="@string/nav_next_page"
				android:id="@+id/MenuNavNextPage" />
			<item
				android:title="@string/nav_last_page"
				android:id="@+id/MenuNavLastPage" />						
		</menu>
	</item>
</menu>
