<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F7F7F7"
   	android:orientation="vertical"
   	android:layout_width="wrap_content"
   	android:layout_height="fill_parent">
   	<LinearLayout
    	android:id="@+id/SmiliesContainer"
    	android:orientation="vertical"
    	android:visibility="gone"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" />
	<TableLayout
		android:padding="5dip"
		android:id="@+id/PostContainer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:stretchColumns="1">
		<TableRow>
			<HorizontalScrollView
		   		android:layout_width="fill_parent" 
		   		android:layout_height="wrap_content"
		   		android:layout_span="3">
				<LinearLayout
					android:id="@+id/FormatButtons"
		    		android:orientation="horizontal"
		    		android:layout_width="wrap_content"
		    		android:layout_height="wrap_content" />
			</HorizontalScrollView>
		</TableRow>
	    <TableRow>
	        <TextView
	            android:text="@string/smiley_tag"
	            android:textColor="#000000"
	            android:padding="3dip" />
	        <EditText
	        	android:id="@+id/inputSmileyTag"
	        	android:hint="@string/smiley_tag_hint"
	        	android:lines="1"
	        	android:inputType="text"
	        	android:textSize="14dip"
	            android:padding="3dip" />
			<Button
				android:id="@+id/ButtonWikiSmilies"
			 	android:layout_width="50dip"
				android:layout_height="wrap_content"
				android:padding="3dip"
				android:textSize="14dip"
				android:text="@string/button_ok" />            
	    </TableRow>	
	    <TableRow>
	        <ScrollView
	        	android:id="@+id/SVPostContent"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:layout_span="3"
			    android:scrollbarStyle="outsideOverlay">
			    <LinearLayout
		    		android:orientation="vertical"
		    	    android:layout_width="fill_parent"
	    			android:layout_height="wrap_content">
			        <EditText
			        	android:layout_width="fill_parent"
				   	 	android:layout_height="wrap_content"
			        	android:id="@+id/InputPostContent"
			        	android:inputType="textMultiLine|textCapSentences"
			        	android:textSize="14dip"
			        	android:gravity="top"
			        	android:minLines="10"
			            android:padding="10dip" />
			    	<LinearLayout
			    		android:orientation="horizontal"
			    	    android:layout_width="wrap_content"
		    			android:layout_height="wrap_content">
		    			<Button
		    				android:id="@+id/ButtonOkAddPost"
							android:layout_width="wrap_content"
		    				android:layout_height="wrap_content"
		    				android:text="@string/button_validate_post" />
		    			<Button
		    				android:id="@+id/ButtonCancelAddPost"
							android:layout_width="wrap_content"
		    				android:layout_height="wrap_content"
		    				android:text="@string/button_cancel" />    				
		    		</LinearLayout>
		    	</LinearLayout>		            
			</ScrollView>
	    </TableRow>
	</TableLayout>
    <TextView
    	android:id="@+id/SmiliesLoading"
    	android:visibility="gone"
    	android:textColor="#000000"
	    android:padding="20dip"
    	android:text="@string/smilies_loading" 
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" />
</LinearLayout>
